err/buildout-md5sums.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/buildout_md5sums'...
Compiling './lib/python3.5/site-packages/buildout_md5sums/plugin.py'...
***   File "./lib/python3.5/site-packages/buildout_md5sums/plugin.py", line 15
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/buildout_md5sums-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Compiling './lib/python3.5/site-packages/zc/buildout/buildout.py'...
***   File "./lib/python3.5/site-packages/zc/buildout/buildout.py", line 84
    print "Annotated sections"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zc/buildout/easy_install.py'...
***   File "./lib/python3.5/site-packages/zc/buildout/easy_install.py", line 927
    except pkg_resources.VersionConflict, err:
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zc/buildout/rmtree.py'...
***   File "./lib/python3.5/site-packages/zc/buildout/rmtree.py", line 57
    os.chmod (path, 0600)
                       ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/zc/buildout/testing.py'...
***   File "./lib/python3.5/site-packages/zc/buildout/testing.py", line 53
    print open(path).read(),
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zc/buildout/testrecipes.py'...
***   File "./lib/python3.5/site-packages/zc/buildout/testrecipes.py", line 13
    print "  %s=%r" % (option, value)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zc/buildout/tests.py'...
***   File "./lib/python3.5/site-packages/zc/buildout/tests.py", line 2966
    print 'downloaded', dist.version
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zc.buildout-1.5.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
